Agregar scripts para el entorno MineRL y configurar el lanzamiento de Malmo

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /MinecraftAgente/src/__pycache__
 MinecraftAgente/resultados/metricas_20250919_182330.csv
 /MinecraftAgente/src/venv
+/minerlagente/agente segunda entrega/logs/*
