Implementación de misiones en Malmo para navegación y búsqueda de agua, incluyendo mejoras en la detección de obstáculos y recompensas. Se añadieron scripts de prueba para conexión y acciones en el entorno de MineRL, así como ajustes en la lógica de movimiento y estado del agente. Se establecieron suposiciones para el entorno de prueba y se crearon varios scripts de prueba para evaluar el comportamiento del agente en diferentes escenarios.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 MinecraftAgente/resultados/metricas_20250919_182330.csv
 /MinecraftAgente/src/venv
 /minerlagente/agente segunda entrega/logs/*
+.env/
+.vscode/
+.env_info
+.env_vars
+__pycache__/
+*.pyc
