Actualización de scripts y modelos para el agente de recolección de madera. Se añadieron nuevos modelos, se mejoró la lógica de entrenamiento en mundos plano y normal, y se creó un script para ejecutar el modelo entrenado. Se eliminó el modelo de mundo plano obsoleto y se actualizó la guía de uso.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ MinecraftAgente/resultados/metricas_20250919_182330.csv
 __pycache__/
 *.pyc
 2_entrega/README_MALMO.md
+2_entrega/malmo/carlos/agente madera/modelo_agente_madera_plano.pkl
+2_entrega/malmo/carlos/agente madera/modelo_agente_madera.pkl
+
